# Grafico-de-Corrida-PIB-Per-Capita

./: README.md  app.ipynb  pyproject.toml
